# workbench

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: audio-interface.ipynb  datalogging.ipynb  scpi-server.ipynb  uncertainty.ipynb
examples/resources/: test-data.csv
tests/: test_utils.py
workbench/: utils.py
workbench/datalogging/: __init__.py  csv.py  influxdb.py
workbench/datalogging/postgresql/: __init__.py
workbench/datalogging/postgresql/resources/: create_table.sql.j2  insert_into.sql.j2  select.sql.j2
workbench/datalogging/timescaledb/: __init__.py
workbench/datalogging/timescaledb/resources/: create_table.sql.j2
workbench/instruments/: __init__.py  agilent_u2751a.py  amaran_desktop.py  ba63.py  brymen_bm869s.py  digilent_analog_discovery_3.py  fluke_2620a.py  keysight_34461a.py  keysight_34465a.py  keysight_daq970a.py  keysight_dsox1204g.py  keysight_e36104b.py  keysight_e36105b.py  leo_bodnar_lbe_1421.py  motu_ultralite_mk5.py  siglent_sdg1022x_plus.py  temper_gold.py  uni_t_ut333bt.py  uni_t_ut353bt.py
workbench/instruments/audio/: __init__.py
workbench/instruments/ble/: __init__.py
workbench/instruments/hid/: __init__.py
workbench/resources/: pt100_3850.csv
workbench/utils/: __init__.py  proxy.py  pt100.py  server.py  solar.py
