[tool.poetry]
name = "workbench"
version = "0.1.0"
description = ""
authors = ["Unusual Audio <unusualaudio@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.13,<4"
jupyter = "^1.0.0"
pyusb = "^1.2.1"
pyvisa = "^1.15.0"
pyvisa-py = "^0.8.0"
psutil = "^7.0.0"
zeroconf = "^0.147.0"
hid = "^1.0.6"
dwfpy = "^1.1.2"
pyserial = "^3.5"
influxdb-client = "^1.43.0"
python-dotenv = "^1.1.0"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
pandas = "^2.3.0"
pyvicp = "^1.1.0"
sympy = "^1.14.0"
si-prefix = "^1.3.3"
dash-daq = "^0.6.0"
tornado = "^6.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
