[project]
name = "workbench"
version = "0.1.0"
description = ""
authors = [
    { name = "Unusual Audio", email = "unusualaudio@protonmail.com" }
]
requires-python = ">=3.13,<4"
dependencies = [
    "pyusb (>=1.3.1,<2.0.0)",
    "pyvisa (>=1.15.0,<2.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "zeroconf (>=0.147.0,<0.148.0)",
    "hid (>=1.0.7,<2.0.0)",
    "pyserial (>=3.5,<4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "si-prefix (>=1.3.3,<2.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "influxdb-client (>=1.49.0,<2.0.0)",
    "humanize (>=4.12.3,<5.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "pyvisa-py (>=0.8.1,<0.9.0)",
    "pyvisa-proxy (>=0.1.3,<0.2.0)",
    "sounddevice (>=0.5.3,<0.6.0)",
    "bleak (>=2.1.1,<3.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "websocket-client (>=1.9.0,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "ipympl (>=0.10.0,<0.11.0)",
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)",
]

[project.scripts]
who-cares = "who_cares.__main__:main"

[tool.setuptools.package-data]
workbench = ["resources/**"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)",
]